tests/baselines/reference/MemberFunctionDeclaration1_es6.errors.txt
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration1_es6.ts(2,4): error TS1220: Generators are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration1_es6.ts (1 errors) ====
    class C {
       *foo() { }
       ~
!!! error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
    }